--- a/folder/inner/index.html
+++ b/folder/inner/index.html
@@ -7,7 +7,7 @@
 <body>
   <h1>Это заголовок</h1>
   <p>Это параграф</p>
-  <img src="/img/img1.jpg" alt="Картинка №1">
-  <img src="../../../img/img2.jpg" alt="Картинка №2">
+  <img src="/my-project/img/img1.jpg" alt="Картинка №1">
+  <img src="../../img/img2.jpg" alt="Картинка №2">
 </body>
 </html>
